--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,1 +1,38 @@
-<p>login works!</p>
+<div class="login__page">
+  <mat-card>
+    <mat-card-title>NewRoute<span class="backoffice__title">/ BackOffice</span></mat-card-title>
+    <mat-card-content>
+      <form >
+        <p>
+          <mat-form-field>
+            <input
+              type="text"
+              matInput
+              placeholder="Usuario"
+              formControlName="username"
+            />
+          </mat-form-field>
+        </p>
+
+        <p>
+          <mat-form-field>
+            <input
+              type="password"
+              matInput
+              placeholder="Contraseña"
+              formControlName="password"
+            />
+          </mat-form-field>
+        </p>
+
+        <!-- <p *ngIf="error" class="error">
+          {{ error }}
+        </p> -->
+
+        <div class="button">
+          <button type="submit" mat-button>Ingresar</button>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
