--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -2,14 +2,14 @@
   <mat-card>
     <mat-card-title>NewRoute<span class="backoffice__title">/ BackOffice</span></mat-card-title>
     <mat-card-content>
-      <form >
+      <form [formGroup]="loginForm">
         <p>
           <mat-form-field>
             <input
               type="text"
               matInput
               placeholder="Usuario"
-              formControlName="username"
+              formControlName="email"
             />
           </mat-form-field>
         </p>
@@ -25,12 +25,12 @@
           </mat-form-field>
         </p>
 
-        <!-- <p *ngIf="error" class="error">
+        <p *ngIf="error" class="error">
           {{ error }}
-        </p> -->
+        </p>
 
         <div class="button">
-          <button type="submit" mat-button>Ingresar</button>
+          <button type="submit" mat-button [disabled]="isInvalid" (click)="login()">Ingresar</button>
         </div>
       </form>
     </mat-card-content>
