--- a/src/app/modules/auth/pages/login/login.component.scss
+++ b/src/app/modules/auth/pages/login/login.component.scss
@@ -44,6 +44,7 @@ mat-card-content {
   width: 300px;
   color: white;
   background-color: red;
+  text-align: center;
 }
 
 .button {
@@ -55,8 +56,13 @@ mat-card-content {
   border: 1px solid #f1f1f1;
   transition: all 0.1s ease-in;
 
-  &:hover {
+  &:hover:not(&:disabled) {
     background-color: #e91e63;
     border: 1px solid #e91e63;
   }
+
+  &:disabled {
+    border: 1px solid rgba(255,255,255,.3);
+  }
+
 }
