feat: header in backoffice

--- a/src/app/modules/dashboard/pages/home/home.component.html
+++ b/src/app/modules/dashboard/pages/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<mat-toolbar color="primary">
+  <!-- <button
+    mat-icon-button
+    class="example-icon"
+    aria-label="Example icon-button with menu icon"
+  >
+    <mat-icon>menu</mat-icon>
+  </button> -->
+  <span>
+    <img class="home__logo" src="assets/images/logo.png" alt="">
+  </span>
+  <span class="example-spacer"></span>
+  <button
+    [matMenuTriggerFor]="menu"
+    mat-icon-button
+    class="example-icon account_circle-icon"
+    aria-label="Example icon-button with heart icon"
+  >
+    <mat-icon>account_circle</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item (click)="logout()">Cerrar Sesión</button>
+  </mat-menu>
+</mat-toolbar>
