--- a/src/app/modules/dashboard/components/spots-list/spots-list.component.html
+++ b/src/app/modules/dashboard/components/spots-list/spots-list.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <div class="header__container">
         <mat-form-field appearance="standard">
-          <mat-label>Filter</mat-label>
+          <mat-label>Buscar spot...</mat-label>
           <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
         </mat-form-field>
         <button mat-mini-fab color="primary" aria-label="Example icon button with a delete icon">
@@ -13,26 +13,34 @@
       
         <!-- Position Column -->
         <ng-container matColumnDef="position">
-          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <th mat-header-cell *matHeaderCellDef> Nombre </th>
           <td mat-cell *matCellDef="let element"> {{element.position}} </td>
         </ng-container>
       
         <!-- Name Column -->
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <th mat-header-cell *matHeaderCellDef> Categoría </th>
           <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
       
         <!-- Weight Column -->
         <ng-container matColumnDef="weight">
-          <th mat-header-cell *matHeaderCellDef> Weight </th>
+          <th mat-header-cell *matHeaderCellDef> Dirección </th>
           <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
         </ng-container>
       
         <!-- Symbol Column -->
         <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef> Symbol </th>
-          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+          <th mat-header-cell *matHeaderCellDef></th>
+          <!-- <td mat-cell *matCellDef="let element"> {{element.symbol}} </td> -->
+          <td mat-cell *matCellDef="let element" class="operations__container">
+              <button mat-raised-button color="accent" class="edit__option">
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-raised-button color="primary" class="delete__option">
+                <mat-icon>delete</mat-icon>
+              </button>
+          </td>
         </ng-container>
       
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -40,7 +48,7 @@
       
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+          <td class="mat-cell" colspan="4">No hay datos que coincidan con la búsqueda "{{input.value}}"</td>
         </tr>
       </table>
       
