update: color in search input

--- a/src/app/modules/dashboard/components/spots-list/spots-list.component.html
+++ b/src/app/modules/dashboard/components/spots-list/spots-list.component.html
@@ -2,7 +2,7 @@
     <div class="header__container">
         <mat-form-field appearance="standard">
           <mat-label>Buscar spot...</mat-label>
-          <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Ej: Gorosito" #input>
         </mat-form-field>
         <button mat-mini-fab color="primary" aria-label="Example icon button with a delete icon">
           <mat-icon>add_location</mat-icon>
