--- a/src/app/modules/dashboard/components/spot-modal/spot-modal.component.scss
+++ b/src/app/modules/dashboard/components/spot-modal/spot-modal.component.scss
@@ -1,21 +1,28 @@
+.mat-dialog-content {
+  overflow-x: hidden;
+}
 .spot-modal__container {
-    width: 1200px;
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
+  width: 1200px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 
-    .map__container {
-        // border: 1px solid red;
-        width: 65%;
+  .map__container {
+    border: 1px solid red;
+    flex-basis: 70%;
+  }
 
+  .form__container {
+    border: 1px solid blue;
+    flex-basis: 30%;
+
+    .full__field {
+      width: 100%;
     }
-
-    .form__container {
-        // border: 1px solid blue;
-    }
+  }
 }
 
 ::ng-deep .mat-form-field-infix {
-    height: 10px;
-    font-size: 12px;
+  // height: 10px;
+  // font-size: 12px;
 }
