--- a/src/app/modules/dashboard/components/spot-modal/spot-modal.component.html
+++ b/src/app/modules/dashboard/components/spot-modal/spot-modal.component.html
@@ -42,11 +42,19 @@
           <mat-label>Teléfonos</mat-label>
           <input matInput />
         </mat-form-field>
+        <file-pond #myPond
+        [options]="pondOptions"
+        (oninit)="pondHandleInit()"
+        (onaddfile)="pondHandleAddFile($event)"
+        (onactivatefile)="pondHandleActivateFile($event)"
+        (onremovefile)="pondHandleRemoveFile($event)"
+        >
+        </file-pond>
       </form>
     </div>
   </div>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancelar</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Aceptar</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial (click)="prueba()" >Aceptar</button>
 </mat-dialog-actions>
